# mailix

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
src/: composer.rs  config.rs  main.rs  mime.rs  omarchy.rs  render.rs  secrets.rs  store.rs  style.rs  util.rs  window.rs
src/google/: gmail_api.rs  mod.rs  oauth.rs  sync.rs
