[package]
name = "mailix"
version = "0.1.0"
edition = "2024"
description = "A native email companion to Calix — GTK4 + libadwaita, multi-account Gmail/iCloud/IMAP"
license = "MIT"

[dependencies]
adw = { version = "0.9.2", package = "libadwaita", features = ["v1_5"] }
gtk = { version = "0.11.4", package = "gtk4", features = ["v4_14"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
chrono = "0.4"
# `v1` bundles the Apple Keychain, Windows, and secret-service backends (all
# target-gated), so this single line is cross-platform: secret-service on
# Linux/BSD, Keychain on macOS. No per-target blocks needed.
keyring = { version = "4.1.4", default-features = false, features = ["v1", "zbus-secret-service-keyring-store"] }
oauth2 = { version = "5.0.0", features = ["reqwest-blocking"] }
serde_json = "1.0"
url = "2.5"
base64 = "0.22"
webkit6 = "0.6.1"
ammonia = "4.1.3"
mail-builder = "0.4.4"
